{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "Player",
            "id": "371f8e53-5796-4d07-95a5-a1fba9a5562b",
            "actions": [
                {
                    "name": "move",
                    "type": "PassThrough",
                    "id": "22ee022c-0509-4b1f-935b-717ca7669a55",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookAround",
                    "type": "PassThrough",
                    "id": "899fc690-572a-4d1a-947e-a4f2e9be3f6d",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "movementXbox",
                    "id": "dd2e5475-3901-4b74-89fe-093a048e9875",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "896470ce-3426-41b1-838b-c670b2e87c28",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bd68a134-8747-49bf-9233-36125ef47cbc",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "82c4afb6-faba-4776-825a-8d7eec7b87a5",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "96db0dfa-a766-4641-99ed-d4cefa70bc65",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "movementkeyboard",
                    "id": "a333ab86-5353-41ba-b236-b38388cc351d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d7c24f77-b667-4f73-b6ab-581bfdd8fbcb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard&mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f83283e2-f666-45c4-a24f-1521f33451fb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard&mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a1efde1d-3334-41e2-a438-519f65e25568",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard&mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b4ae31af-4bad-46f9-9227-662c614f7163",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard&mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "xBox",
                    "id": "a28e4b2b-8559-4801-932c-916abbfe942a",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "255a53bf-9e3a-402d-a57e-22425988a4b0",
                    "path": "<XInputController>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fd0129f0-f6fe-48c6-9f6e-349c16a9843a",
                    "path": "<XInputController>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1f82551c-fe33-4ba0-b0e5-477cdad82b67",
                    "path": "<XInputController>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f1b49333-b160-4ece-9ba1-3a86fb5e32e2",
                    "path": "<XInputController>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "57ba64b6-87ff-45eb-804e-3d960dcbc553",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false)",
                    "groups": "keyboard&mouse",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "xBoxController",
            "bindingGroup": "xBoxController",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "keyboard&mouse",
            "bindingGroup": "keyboard&mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}